[workspace]
members = ["blockchain/cw721-multi"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[profile.release.package.cw721-multi]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'
