[package]
name = "test-utils"
version = "0.1.0"
authors = ["Lukasz Ptak <lukasz@ulam.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.5.3"
