[package]
name = "cw721-market"
version = "0.1.0"
authors = ["Lukasz Ptak <lukasz@ulam.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
cw-ownable = "0.5.1"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw721-multi = { path = "../cw721-multi" }
thiserror = "1.0.*"
