[package]
name = "cw721-multi"
version = "0.1.0"
authors = ["Lukasz Ptak <lukasz@ulam.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.5.2"
cosmwasm-std = "1.2.1"
cw-ownable = "0.5.1"
cw2 = "1.1.2"
cw721-base = { version = "0.18.0", features = ["library"] }
